# MDE

./: CHANGELOG.md  Cargo.toml  LICENSE  MANIFEST.in  Makefile  README.md  README_PLUGINS.md  install.sh  pyproject.toml  setup.py
.github/workflows/: ci.yml  lizardfs-build.yml  release.yml  ui-screenshot.yml
crates/mackes-nebula-https-tunnel/: Cargo.toml
crates/mackes-nebula-https-tunnel/src/: activation.rs  framing.rs  lib.rs
crates/mackes-nebula-https-tunnel/tests/: throughput.rs
crates/mackes-panel/: Cargo.toml
crates/mackesd/: Cargo.toml
crates/mde-files/: Cargo.toml
crates/mde-kdc/: Cargo.toml
crates/mde-panel/: Cargo.toml
crates/mde-peer-card/: Cargo.toml
crates/mde-popover/: Cargo.toml
crates/mde-wizard/: Cargo.toml
crates/mde-workbench/: Cargo.toml
data/: ABOUT.txt
data/applications/: mackes-clipboard.desktop  mackes-mesh-uri-handler.desktop  mackes-panel.desktop  mackes-shell.desktop  mde.desktop
data/css/: carbon-productive.css  mackes.css  tokens.css
data/gvfs/: mesh.mount
data/panel/: xfce4-panel.snapshot.json
data/presets/: daylight.yaml  hashbang.yaml  mackes.yaml  node.yaml  vanilla.yaml
data/sway/: config
data/systemd/: headscale.service  mackes-clipboard-daemon.service  mackes-gvfsd-mesh.service  mackes-mdns-relay.service  mackes-node.service  mackes-tailscale-bootstrap.service  mde-installer-complete.service  mde-installer.target  mde-installer@.service  mde-session.service
data/thumbnailers/: mackes-mesh.thumbnailer
docs/: PROJECT_WORKLIST.md
install-helpers/: apply-xfce-baseline.sh  configure-lightdm.sh  install-carbon-icons.sh  lint-voice.sh  mde-installer-complete.sh  mde-installer-launch.sh  register-gvfs-mesh.sh  sync-user-sway-exec-lines.sh
mackes/: __init__.py  about.py  app.py  app_mgmt.py  birthright.py  caddy_gateway.py  clipboard_app.py  headscale_postgres.py  lightdm.py  mdns_relay.py  mdns_relay_daemon.py  mesh_browser.py  mesh_derp.py  mesh_fs.py  mesh_mdns.py  mesh_notifications.py  mesh_services.py  mesh_ssh.py  mesh_sync.py  mesh_thumbnailer.py  mesh_vpn.py  native_clients.py  presets.py  snapshots.py  state.py  uninstall.py
nightly/: LATEST.json
portfolio-site/: index.html
tests/: conftest.py  test_presets.py  test_uninstall_legacy.py
(+269 files in other folders)
